Fix nav scrollbars appearing on desktop.

--- a/resources/assets/components/Navigation/navigation.scss
+++ b/resources/assets/components/Navigation/navigation.scss
@@ -1,9 +1,7 @@
 @import '../../scss/next-toolbox';
 
 .nav {
-  @include media($mobile) {
-    overflow-x: scroll;
-  }
+  overflow-x: auto;
 }
 
 .nav-link {
